--- a/result/2021-12-28.md
+++ b/result/2021-12-28.md
@@ -43,6 +43,7 @@
 43. [研考刚结束新一批考生已开始备考](https://s.weibo.com//weibo?q=%23%E7%A0%94%E8%80%83%E5%88%9A%E7%BB%93%E6%9D%9F%E6%96%B0%E4%B8%80%E6%89%B9%E8%80%83%E7%94%9F%E5%B7%B2%E5%BC%80%E5%A7%8B%E5%A4%87%E8%80%83%23&Refer=top) 49229
 44. [炭火烤鸡蛋变炸蛋瞬间火光四溅](https://s.weibo.com//weibo?q=%23%E7%82%AD%E7%81%AB%E7%83%A4%E9%B8%A1%E8%9B%8B%E5%8F%98%E7%82%B8%E8%9B%8B%E7%9E%AC%E9%97%B4%E7%81%AB%E5%85%89%E5%9B%9B%E6%BA%85%23&Refer=top) 41216
 45. [苏炳添速度研究与训练中心落户暨南大学](https://s.weibo.com//weibo?q=%E8%8B%8F%E7%82%B3%E6%B7%BB%E9%80%9F%E5%BA%A6%E7%A0%94%E7%A9%B6%E4%B8%8E%E8%AE%AD%E7%BB%83%E4%B8%AD%E5%BF%83%E8%90%BD%E6%88%B7%E6%9A%A8%E5%8D%97%E5%A4%A7%E5%AD%A6&Refer=top) 38434
-46. [宇宙的尽头就是养生](https://s.weibo.com//weibo?q=%23%E5%AE%87%E5%AE%99%E7%9A%84%E5%B0%BD%E5%A4%B4%E5%B0%B1%E6%98%AF%E5%85%BB%E7%94%9F%23&Refer=top) 24896
+46. [宇宙的尽头就是养生](https://s.weibo.com//weibo?q=%23%E5%AE%87%E5%AE%99%E7%9A%84%E5%B0%BD%E5%A4%B4%E5%B0%B1%E6%98%AF%E5%85%BB%E7%94%9F%23&Refer=top) 26750
 47. [2个动作增强腰椎力量](https://s.weibo.com//weibo?q=%232%E4%B8%AA%E5%8A%A8%E4%BD%9C%E5%A2%9E%E5%BC%BA%E8%85%B0%E6%A4%8E%E5%8A%9B%E9%87%8F%23&Refer=top) 24053
 48. [实用好物清单](https://s.weibo.com//weibo?q=%23%E5%AE%9E%E7%94%A8%E5%A5%BD%E7%89%A9%E6%B8%85%E5%8D%95%23&Refer=top) 21213
+49. [短期失眠超3个月会成为慢性失眠](https://s.weibo.com//weibo?q=%23%E7%9F%AD%E6%9C%9F%E5%A4%B1%E7%9C%A0%E8%B6%853%E4%B8%AA%E6%9C%88%E4%BC%9A%E6%88%90%E4%B8%BA%E6%85%A2%E6%80%A7%E5%A4%B1%E7%9C%A0%23&Refer=top) 14270
